--- a/views/searchprofile.ejs
+++ b/views/searchprofile.ejs
@@ -35,7 +35,7 @@
             </div>
             <a href="/profile">
                 <div class="dp">
-                    <img src="https://freepikpsd.com/wp-content/uploads/2019/10/default-profile-image-png-1-Transparent-Images.png"
+                    <img src="<%=founduser.dp%>"
                         alt="Image error">
                 </div>
             </a>
