--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -83,6 +83,7 @@ a {
     left: 50%;
     top: 20%;
     transform: translate(-50%,0);
+    background-color: rgba(219, 219, 219, 0.562);
 }
 
 #container {
